# the-lz4-library

./: BUILDING.md  CHANGELOG.md  CMakeLists.txt  CNAME  Dockerfile  NEWS.md  NOTICE  README.md  _config.yml  build.sh  scaffold.yaml  thelz4libraryConfig.cmake.in
.changes/: 0.0.1.md
include/the-lz4-library/: lz4.h
include/the-lz4-library/lz4/: lz4.h
src/: lz4.c
src/impl/: lz4.c  lz4hc.c  lz4hc.h  xxhash.c  xxhash.h
tests/: CMakeLists.txt
tests/src/: test_lz4.c
